--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,9 +1,3 @@
 <h1>Edit product</h1>
 
-<%= form_for @product do |f| %>
-  <%= f.label :name %>
-  <%= f.text_field :name %>
-  <%= f.label :cost %>
-  <%= f.text_field :cost %>
-  <%= f.submit  %>
-<% end %>
+<%= render "layouts/product_form" %>
