--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -4,6 +4,9 @@
   <ul>
     <% @products.each do |product| %>
       <li><%= link_to product.name, product_path(product) %></li>
+      <p>Country of origin: <%= product.country_of_origin %></p>
+      <p>Cost: <%= product.cost %></p>
+      <p>Total reviews: <%= product.reviews.length %></p>
     <% end %>
   </ul>
 <% else %>
