Added seeded faker gem.

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -42,3 +42,6 @@
 <% else %>
 <p>There are no products to display</p>
 <% end %>
+
+<p><%= link_to "Create new product", new_product_path %></p>
+<p><%= link_to "View all current products", products_path %></p>
