--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -13,7 +13,8 @@
   <p>There are no products yet.</p>
 <% end %>
 
-
-<%= button_to "Create new product", 
-              new_product_path,
-              method: :get %>
+<% if current_user && current_user.admin %>
+  <%= button_to "Create new product", 
+                new_product_path,
+                method: :get %>
+<% end %>
