--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,17 @@
 
     <%= flash[:alert] %>
     <%= flash[:notice] %>
-
+    
+    <% if current_user %>
+      <%= button_to 'Sign-out', 
+          destroy_user_session_path, 
+          method: :delete, 
+          data: { turbo: false} %>
+    <% else %>
+      <%= button_to 'Sign_in', 
+          new_user_session_path, 
+          method: :get %>
+    <% end %>
     <%= yield %>
   
   </body>
