--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -19,13 +19,15 @@
               new_product_review_path(@product),
               method: :get %>
 
-<%= button_to "Edit product", 
-              edit_product_path(@product),
-              method: :get %>
+<% if current_user && current_user.admin %>
+  <%= button_to "Edit product", 
+                edit_product_path(@product),
+                method: :get %>
 
-<%= button_to "Delete product", 
-              product_path(@product),
-              method: :delete %> 
+  <%= button_to "Delete product", 
+                product_path(@product),
+                method: :delete %> 
+<% end %>
 
 <%= button_to "Return to products page", 
               products_path,
